--- a/react-folder/package.json
+++ b/react-folder/package.json
@@ -6,8 +6,12 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+   "react": "^15.4.1",
+   "react-dom": "^15.4.1",
+   "react-redux": "^4.4.6",
+   "redux": "^3.6.0",
+   "redux-devtools-extension": "^1.0.0",
+   "redux-thunk": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
