--- a/react-folder/package.json
+++ b/react-folder/package.json
@@ -11,7 +11,8 @@
    "react-redux": "^4.4.6",
    "redux": "^3.6.0",
    "redux-devtools-extension": "^1.0.0",
-   "redux-thunk": "^2.1.0"
+   "redux-thunk": "^2.1.0",
+   "jquery": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
