--- a/react-folder/package.json
+++ b/react-folder/package.json
@@ -12,7 +12,8 @@
    "redux": "^3.6.0",
    "redux-devtools-extension": "^1.0.0",
    "redux-thunk": "^2.1.0",
-   "jquery": "^3.1.1"
+   "jquery": "^3.1.1",
+   "react-router": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
