--- a/react-folder/package.json
+++ b/react-folder/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "jquery": "^3.1.1",
     "react": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
     "react-dropzone": "^3.7.3",
     "react-fileupload-progress": "^0.4.0",
